src/test/resources/plang-strict/parse-error/013_string_to_chararr_assignment.plang
**#String to char array assignment should cause type error
**FirstErrorLoc:9,8
Program testing
  Változók:
    a: Szöveg,
    b: Karakter[5]

  a := "12345"
  b := a
program_vége
